# AutoOpenBrowser

./: .gitignore  LICENSE  OpenBrowser.py  OpenBrowserGUI.py  config.ini  pyproject.toml  release.cmd
